--- a/Codigo/web/pom.xml
+++ b/Codigo/web/pom.xml
@@ -69,6 +69,10 @@
     		<artifactId>sendgrid-java</artifactId>
     		<version>4.9.3</version>
 		</dependency>
+		<dependency>
+   			<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
